# zemtik-core

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODOS.md  build.rs  config.example.yaml  docker-compose.yml  install.sh  schema_config.example.json  schema_config.legal.json  skills-lock.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
circuit/: Nargo.toml
circuit/count/: Nargo.toml
circuit/count/src/: main.nr
circuit/lib/: Nargo.toml
circuit/lib/src/: lib.nr
circuit/src/: main.nr
circuit/sum/: Nargo.toml
circuit/sum/src/: main.nr
config/: schema_config.demo.json
demo/: README.md  demo.sh  sample_transactions.csv
docs/: ANONYMIZER.md  ARCHITECTURE.md  COMPLIANCE_LATAM.md  COMPLIANCE_RECEIPT.md  CONCEPTS.md  CONFIGURATION.md  EVIDENCE_PACK_AUDITOR_GUIDE.md  FOR_LEGAL.md  GETTING_STARTED.md  HOW_TO_ADD_TABLE.md  INDUSTRY_USE_CASES.md  INTEGRATION_CHECKLIST.md  INTENT_ENGINE.md  MCP_ATTESTATION.md  PRIVACY_FILTER_FEASIBILITY.md  RUNBOOK.md  SCALING.md  SUPPORTED_QUERIES.md  TROUBLESHOOTING.md  TUNNEL_MODE.md  ZK_CIRCUITS.md  mcp_tools.example.json  mcp_tools.schema.json
eval/: intent_eval.rs  labeled_prompts.json
proto/: anonymizer.proto
sidecar/: Dockerfile  README.md  entity_hashes.py  offsets.py  recognizers.py  requirements.txt  server.py  zemtik_entity_hashes.py
sidecar/tests/: test_byte_offsets.py  test_recognizer_patterns.py  test_server_constants.py
src/: anonymizer.rs  audit.rs  bundle.rs  config.rs  db.rs  engine_fast.rs  entity_hashes.rs  error.rs  evidence.rs  intent.rs  intent_embed.rs  keys.rs  lib.rs  llm_backend.rs  main.rs  mcp_auth.rs  mcp_proxy.rs  mcp_tools.rs  openai.rs  prover.rs  provider_registry.rs  proxy.rs  receipts.rs  rewriter.rs  router.rs  startup.rs  time_parser.rs  tunnel.rs  types.rs  verify.rs
src/config/: env.rs  mod.rs  schema.rs
src/proxy/: mod.rs  state.rs
src/proxy/handlers/: mod.rs
src/proxy/lanes/: fast.rs  general.rs  mod.rs  zk.rs
src/proxy/ui/: mod.rs
supabase/migrations/: 001_create_transactions.sql
tests/: integration_anonymizer.rs  integration_mcp.rs  integration_mcp_serve.rs  integration_proxy.rs  integration_tunnel.rs  test_anonymizer.rs  test_bundle.rs  test_config.rs  test_db.rs  test_engine_fast.rs  test_entity_hashes.rs  test_evidence.rs  test_general_lane.rs  test_intent.rs  test_intent_embed.rs  test_keys.rs  test_llm_backend.rs  test_mcp.rs  test_mcp_proxy.rs  test_mcp_tools.rs  test_openai.rs  test_poseidon_compat.rs  test_prover.rs  test_provider_registry.rs  test_receipts.rs  test_rewriter.rs  test_router.rs  test_time_parser.rs  test_types.rs  test_verify.rs
tests/fixtures/: sample.docx  sample_corrupted.docx
