[package]
name = "zemtik"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
# Use the same poseidon-rs version as babyjubjub-rs to share the Fr type
poseidon-rs = "0.0.8"
ff_ce = "0.11"
# Use aarch64 feature on Apple Silicon to avoid ppv-lite86 blake-hash panic
babyjubjub-rs = { version = "0.0.11", features = ["aarch64"], default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
rand = "0.8"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
# Direct Postgres connection for DDL (table creation) in Supabase backend.
# native-tls is already in the tree via reqwest, so postgres-native-tls adds no new TLS lib.
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
zip = "2"
dirs = "5"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
