[package]
name = "zemtik"
version = "0.13.5"
edition = "2021"
# Main CLI is the default when multiple [[bin]] targets exist (e.g. intent-eval).
default-run = "zemtik"

[dependencies]
constant_time_eq = "0.3"
zeroize = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# Use the same poseidon-rs version as babyjubjub-rs to share the Fr type
poseidon-rs = "0.0.8"
ff_ce = "0.11"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
rand = "0.8"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
# Direct Postgres connection for DDL (table creation) in Supabase backend.
# native-tls is already in the tree via reqwest, so postgres-native-tls adds no new TLS lib.
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
zip = "2"
dirs = "5"
sha2 = "0.10"
ed25519-dalek = "2"
hkdf = "0.12"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
fastembed = { version = "5", optional = true }
rmcp = { version = "=1.4.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }
schemars = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

# aarch64-specific: babyjubjub-rs needs the "aarch64" feature on Apple Silicon
# to avoid a ppv-lite86 blake-hash panic. x86_64 builds must NOT include it.
[target.'cfg(target_arch = "aarch64")'.dependencies]
babyjubjub-rs = { version = "0.0.11", features = ["aarch64"], default-features = false }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
babyjubjub-rs = "0.0.11"

[features]
default = ["embed"]
embed = ["dep:fastembed"]
regex-only = []
eval = []
benchmarks = []

[[bin]]
name = "intent-eval"
path = "eval/intent_eval.rs"
required-features = ["eval"]


[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
serial_test = "3"
